--- a/.cproject
+++ b/.cproject
@@ -53,6 +53,7 @@
 									<listOptionValue builtIn="false" value="../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc"/>
 									<listOptionValue builtIn="false" value="../Application/obd2"/>
 									<listOptionValue builtIn="false" value="../Application/console"/>
+									<listOptionValue builtIn="false" value="../Application/fast_fifo"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1376175496" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
